# objects

./: .gitignore  README.md  objects.launch  primitives.py  shape.urdf.xacro  spawn_helper.py  spawn_request.py  spawner.py  test.py  utils.xacro
complex/: objects.world
primitive/: CMakeLists.txt  package.xml  primitive.world  setup.py
primitive/description/: shape.urdf.xacro
primitive/launch/: objects.launch
primitive/scripts/: cylindertest.py  partition.py  primitives.py  restrict.py  shape.urdf.xacro  spawn_helper.py  spawner.py  test.py
primitive_msgs/: CMakeLists.txt  package.xml
primitive_msgs/srv/: Spawn.srv
