<?xml version="1.0"?>
<package>
  <name>primitive</name>
  <version>0.7.1</version>
  <description>
    Spawn primitive objects
  </description>

  <maintainer email="dennycaopersonal@gmail.com">
    Denny Cao
  </maintainer>
  <license>Apache 2.0</license>

  <author>Denny Cao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- package contains messages -->
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>primitive_msgs</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>primitive_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>

