<?xml version="1.0"?>
<package format="2">
  <name>primitive</name>
  <version>0.0.0</version>
  <description>
    Spawn primitive objects
  </description>

  <maintainer email="dennycaopersonal@gmail.com">
    Denny Cao
  </maintainer>
  <license>Apache 2.0</license>

  <author>Denny Cao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- package contains messages -->
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>primitive_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>franka_msgs</build_depend>


  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>primitive_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>franka_msgs</exec_depend>

</package>

