<?xml version="1.0"?>
<package>
  <name>primitive_msgs</name>
  <version>0.7.1</version>
  <description>
    Services for spawning primitives
  </description>

  <maintainer email="dennycaopersonal@gmail.com">
    Denny Cao
  </maintainer>
  <license>Apache 2.0</license>

  <author>Denny Cao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- package contains messages -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
