<?xml version="1.0"?>
<package format="2">
  <name>primitive_msgs</name>
  <version>0.0.0</version>
  <description>
    Services for spawning primitives
  </description>

  <maintainer email="dennycaopersonal@gmail.com">
    Denny Cao
  </maintainer>
  <license>Apache 2.0</license>

  <author>Denny Cao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- package contains messages -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
